deployment/watchlist-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watchlist-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: service
  ports:
    - port: 4000
      targetPort: 4000
